<?xml version="1.0"?>
<package>
  <name>my_turtlebot_rapps</name>
  <version>0.0.0</version>
  <description>
    This package includes my own turtlebot rapps
  </description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <author>Jihoon Lee</author>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/my_turtlebot_rapps</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>turtlebot_bringup</build_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>rosbridge_server</run_depend>

  <export>
    <!--<rocon_app>relative_path_to_rapp/my_rapp.rapp</rocon_app> -->
    <!--<rocon_app>rapps/angry_chirp/angry_cat_chirp.rapp</rocon_app>-->
  </export>
</package>
